--- a/germanium-map.html
+++ b/germanium-map.html
@@ -54,7 +54,18 @@ Example:
         <leaflet-map fit-to-markers 
                      style$="width: {{width}}; height: {{height}}"
                      latitude="{{latitude}}" longitude="{{longitude}}" zoom="{{zoom}}" max-zoom="{{maxZoom}}">
-                     <template is="dom-repeat" items="[[assets]]" as="asset">
+                     <leaflet-scale-control position="topright" metric imperial>
+            </leaflet-scale-control>
+
+            <leaflet-tilelayer 
+                url="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png" max-zoom="19">
+                Map data © <a href="http://openstreetmap.org">OpenStreetMap</a> contr., 
+                <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, 
+                Imagery © <a href="http://mapbox.com">Mapbox</a>
+                Data © <a href="http://mapbox.com">Innovation</a>
+            </leaflet-tilelayer>
+
+            <template is="dom-repeat" items="[[assets]]" as="asset">
                 <leaflet-marker 
                     longitude="[[asset.properties.longitude]]" 
                     latitude="[[asset.properties.latitude]]" 
